# libobj

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml
.cargo/: audit.toml
.claude/: settings.json
crates/libobj/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/libobj/examples/: build-smoke.sh  smoke.c
crates/libobj/include/: libobj.h
crates/libobj/src/: error.rs  lib.rs  lifecycle.rs  queries.rs  txn.rs
crates/libobj/tests/: c_smoke.rs  crud.rs  diagnostic.rs  encryption.rs  errmsg.rs  header_drift.rs  index_consistency.rs  lifecycle.rs  queries.rs  queries_negative.rs  txn_isolation.rs  txn_leak.rs  txn_negative.rs
crates/obj-core/: Cargo.toml  README.md
crates/obj-core/benches/: btree_borrowed_scan.rs  btree_range.rs
crates/obj-core/examples/: seq_alloc_probe.rs
crates/obj-core/src/: backup.rs  catalog.rs  crypto.rs  error.rs  id.rs  integrity.rs  lib.rs  txn.rs
crates/obj-core/src/btree/: delete.rs  insert.rs  mod.rs  node.rs  range.rs  tests.rs
crates/obj-core/src/codec/: dynamic.rs  dynamic_de.rs  header.rs  migrate.rs  mod.rs  schema.rs  stored_schema.rs
crates/obj-core/src/index/: extract.rs  key.rs  mod.rs  spec.rs
crates/obj-core/src/pager/: cache.rs  checksum.rs  freelist.rs  header.rs  mod.rs  page.rs  tests.rs  tests_fault.rs
crates/obj-core/src/platform/: env.rs  fault.rs  lock.rs  mod.rs
crates/obj-core/src/wal/: frame.rs  mod.rs  tests.rs
crates/obj-core/tests/: btree_oracle.rs  catalog_mvcc.rs  crash_cycles.rs  determinism.rs  document_roundtrip.rs  dynamic_node_budget.rs  entropy_determinism.rs  enum_walk_codec.rs  fault_bitrot.rs  index_catalog.rs  index_oracle.rs  integrity_catalog_index.rs  integrity_corruption.rs  pager_header_mvcc.rs  schema_catalog_enum_golden.rs  schema_catalog_golden.rs  seq_alloc_probe.rs  tagged_seq_alloc_probe.rs
crates/obj-core/tests/alloc_probe_common/: mod.rs
crates/obj-derive/: Cargo.toml  README.md
crates/obj-derive/src/: lib.rs
crates/obj-rs/: Cargo.toml  README.md
crates/obj-rs/benches/: collection_scan.rs  concurrent_reads.rs  index_lookup.rs  index_range.rs  integrity_1gb.rs  mem_off.rs  perf_table.rs  quick.rs
crates/obj-rs/benches/common/: mod.rs
crates/obj-rs/src/: cli.rs  collection.rs  config.rs  db.rs  index_bound.rs  index_maint.rs  inspect.rs  integrity.rs  lib.rs  query.rs  range.rs  txn.rs
crates/obj-rs/src/asynchronous/: collection.rs  db.rs  mod.rs  query.rs
crates/obj-rs/tests/: async_collection.rs  async_db_query.rs  async_smol.rs  async_tokio.rs  attach.rs  attach_shared.rs  backup.rs  backup_concurrent.rs  batch_catalog_flush.rs  compression.rs  compression_refusal.rs  concurrent_full_scan.rs  concurrent_stress.rs  crash_cycles_indexed.rs  cross_process_lock.rs  cross_version_index_addition.rs  db_api.rs  derive_auto_migrate.rs  derive_basic.rs  derive_compile_fail.rs  derive_hygiene.rs  derive_output_contract.rs  design_md_attach.rs  design_md_derive.rs  design_md_queries.rs  disk_schema_migration.rs  encryption.rs  encryption_refusal.rs  enum_migration.rs  enum_schema_evolution.rs  golden_fixture.rs  index_maintenance.rs  integrity.rs  lazy_migration.rs  perf_table_compiles.rs  query_basic.rs  raw_txn_helpers.rs  read_full_scan_snapshot.rs  readme_compiles.rs  reconcile_indexes_raw.rs  (+11 more)
crates/obj-rs/tests/derive_compile_fail/: auto_migrate_missing_default.rs  auto_migrate_missing_default.stderr  bad_field_index_kind.rs  bad_field_index_kind.stderr  bad_version_negative.rs  bad_version_negative.stderr  bad_version_string.rs  bad_version_string.stderr  composite_missing_field.rs  composite_missing_field.stderr  composite_one_field.rs  composite_one_field.stderr  default_and_default_with.rs  default_and_default_with.stderr  duplicate_struct_attr.rs  duplicate_struct_attr.stderr  each_on_non_vec.rs  each_on_non_vec.stderr  empty_collection.rs  empty_collection.stderr  generic_struct.rs  generic_struct.stderr  history_removed.rs  history_removed.stderr  short_composite_non_string.rs  short_composite_non_string.stderr
docs/: format.md
